option java_outer_classname = "LCUpgradeType";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.common";

enum UpgradeType{
	terminal			=0;
	cardReader			=12;
	beidou				=52;
}